Bug Fixes in Login Page

--- a/src/pages/add-user/add-user.html
+++ b/src/pages/add-user/add-user.html
@@ -35,6 +35,10 @@
       <ion-label>Female</ion-label>
       <ion-radio value="female"></ion-radio>
     </ion-item>
+    <ion-item>
+      <ion-label>Other</ion-label>
+      <ion-radio value="other"></ion-radio>
+    </ion-item>
   </ion-list>
 
   <ion-list>
