--- a/src/pages/user-info/user-info.html
+++ b/src/pages/user-info/user-info.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>userinfo</ion-title>
+    <ion-title>User Info</ion-title>
   </ion-navbar>
 
 </ion-header>
